# elevator-simulation

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  INSTALL.md  README.md  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  pytest.ini  redis.conf
.github/workflows/: build.yml  ci.yml  cicd.yml  deploy.yml
docs/: architecture-overview.txt
grafana/provisioning/dashboards/: loki.yaml
grafana/provisioning/datasources/: datasources.yml  loki.yaml
infra/environments/develop/: alb.tf  backend.conf  ecs.tf  elasticache.tf  fluentbit.conf  main.tf  observability.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
otel/: otel-collector-config.yaml
promtail/: promtail-config.yml
src/: channels.py  config.py  main.py  publisher.py  subscriber.py
src/app/: Dockerfile  main.py
src/app/static/js/: requests.js
src/app/templates/: base.html  index.html  request_table.html
src/config/: __init__.py  channels.py  logging.py  redis.py  redis_adapter.py
src/controller/: Dockerfile  controller.py  main.py
src/libs/cache/: __init__.py  config.py  exceptions.py  service.py
src/libs/cache/backends/: __init__.py  redis.py
src/libs/messaging/event_stream/: __init__.py  base.py  exceptions.py  factory.py  redis.py  service.py
src/libs/messaging/pubsub/: __init__.py  base.py  client.py  exceptions.py  factory.py  redis.py  service.py
src/libs/messaging/pubsub/backends/: __init__.py  redis.py
src/models/: elevator.py  request.py
src/scheduler/: Dockerfile  factory.py  main.py  scheduler.py
src/services/: controller.py  run_services.py  scheduler.py
src/static/css/: style.css
src/static/js/: requests.js
src/templates/: base.html  elevator_table.html  index.html
tests/: conftest.py  test_redis_pubsub.py  test_redis_streams.py
tests/app/: test_app.py
tests/cache/: test_redis_backend.py
tests/controller/: test_controller.py
tests/scheduler/: test_scheduler.py
