[project]
name = "redis-pubsub-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
    "redis>=5.2.1",
    "uvicorn>=0.34.1",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Set max line length for linting/formatting
line-length = 79

[tool.ruff.format]
# use double quotes for strings.
quote-style = "double"

# automatically detect the appropriate line ending.
line-ending = "auto"

[dependency-groups]
dev = [
    "faker>=22.5.0",
    "fakeredis>=2.29.0",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "ruff>=0.6.9",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.12.0",
    "pytest>=8.0.0",
    "watchdog>=6.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["."]
exclude = ["**/__pycache__", ".venv", ".tox", "build", "dist"]

# If you use "src/" layout or a monorepo, point extra paths at import roots:
executionEnvironments = [
  { root = ".", extraPaths = ["src", "packages/pkg_a/src", "services/api/src"] }
]

# Optional quality knobs
reportMissingImports = true
useLibraryCodeForTypes = true
